<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboardFragment"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_blue_dashboard"
            android:checked="true"
            />

        <item
            android:id="@+id/profileFragment"
            android:title="@string/profile"
            android:icon="@drawable/ic_blue_user"
            />

        <item
            android:id="@+id/pendingOrdersFragment"
            android:title="@string/pending_orders"
            android:icon="@drawable/ic_blue_hourglass"
            />

        <item
            android:id="@+id/customerOrdersFragment"
            android:title="@string/customer_orders"
            android:icon="@drawable/ic_outline_payments"
            />

        <item
            android:id="@+id/ordersFragment"
            android:title="@string/orders"
            android:icon="@drawable/ic_outline_blue_order"
            />

        <item
            android:id="@+id/transactionsFragment"
            android:title="@string/transactions"
            android:icon="@drawable/ic_blue_history"
            />

        <item
            android:id="@+id/logOutDialogFragment"
            android:actionLayout="@layout/button_log_out"
            android:title="@string/log_out"
            />
    </group>

</menu>


