<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    >

    <TextView
        android:id="@+id/toolbar_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hail"
        android:textColor="@color/steel_blue_500"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginRight="-2dp"
        android:layout_marginEnd="-2dp"
        />

    <TextView
        android:id="@+id/toolbar_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginRight="-2dp"
        android:layout_marginEnd="-2dp"
        android:background="@color/steel_blue_500"
        />

    <TextView
        android:id="@+id/toolbar_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank"
        android:textColor="@color/steel_blue_500"
        android:textSize="30sp"
        android:textStyle="bold"
        />

</androidx.appcompat.widget.Toolbar>



