<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        >

        <include
            layout="@layout/progress_bar_list_item"
            />

        <include
            layout="@layout/reload_button_view"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dash_board_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:visibility="gone"
            android:background="@drawable/blue_gradient"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible"
            >

            <TextView
                android:id="@id/account_balance_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_balance"
                android:textColor="@color/yellow"
                android:textSize="@dimen/medium_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@id/account_balance_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/xxlarge_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_balance_label_text_view"
                tools:text="N 50,000.00"
                />

            <TextView
                android:id="@id/account_number_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:textColor="@color/yellow"
                android:textSize="@dimen/medium_text"
                android:layout_marginTop="@dimen/medium_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_balance_text_view"
                />

            <TextView
                android:id="@id/account_number_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_number_label_text_view"
                tools:text="1123234554"
                />

            <Button
                android:id="@+id/withdraw_button"
                android:text="@string/withdraw"
                android:visibility="gone"
                style="@style/MyDashboardWalletActionButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_number_text_view"
                tools:visibility="visible"
                />

            <Button
                android:id="@+id/fund_button"
                android:text="@string/fund_account"
                style="@style/MyDashboardWalletActionButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_number_text_view"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@id/customer_order_notification_button"
            android:text="@string/num_new_customer_orders"
            style="@style/MyDashboardNotificationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dash_board_top"
            tools:visibility="visible"
           />

        <Button
            android:id="@id/order_notification_button"
            android:text="@string/num_new_orders_notification"
            style="@style/MyDashboardNotificationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/customer_order_notification_button"
            tools:visibility="visible"
            />

        <TextView
            android:id="@id/our_services_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_services"
            android:textStyle="bold"
            android:textSize="@dimen/large_text"
            android:textColor="@color/steel_blue_500"
            android:layout_marginTop="@dimen/large_margin"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_notification_button"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/cash_delivery_service_button"
            android:text="@string/cash_delivery"
            android:drawableLeft="@drawable/ic_outline_white_big_delivery"
            style="@style/MyOurServiceButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/our_services_text_view"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/cash_pick_up_service_button"
            android:text="@string/cash_pick_up"
            android:drawableLeft="@drawable/ic_outline_white_big_pick_up"
            style="@style/MyOurServiceButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cash_delivery_service_button"
            tools:visibility="visible"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


