<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/steel_blue_500"
    tools:context=".ui.SplashActivity">

    <LinearLayout
        android:id="@id/splash_screen_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/toolbar_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hail"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginRight="-2dp"
            android:layout_marginEnd="-2dp"
            />

        <TextView
            android:id="@+id/toolbar_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textColor="@color/steel_blue_500"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginRight="-2dp"
            android:layout_marginEnd="-2dp"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/toolbar_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>